[gd_scene load_steps=29 format=2]

[ext_resource path="res://resources/events_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://ui/event_board/event_board.tscn" type="PackedScene" id=2]
[ext_resource path="res://misc/world_fog/world_fog.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://misc/event_service.gd" type="Script" id=5]
[ext_resource path="res://misc/event_tiles.gd" type="Script" id=6]
[ext_resource path="res://ui/health_bar/health_bar.tscn" type="PackedScene" id=7]
[ext_resource path="res://misc/gameover_service.gd" type="Script" id=8]
[ext_resource path="res://scenes/main/main.gd" type="Script" id=9]
[ext_resource path="res://assets/ui/progress_bar.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/progress_bar_frame_v.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/progress_bar_v.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/progress_bar_frame.png" type="Texture" id=13]
[ext_resource path="res://ui/temperature_bar.gd" type="Script" id=14]
[ext_resource path="res://misc/random_event_tiles.gd" type="Script" id=15]
[ext_resource path="res://resources/terrain_tileset.tres" type="TileSet" id=16]
[ext_resource path="res://misc/gamesave_service.gd" type="Script" id=17]
[ext_resource path="res://ui/journal/journal.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/cubex4.png" type="Texture" id=19]
[ext_resource path="res://assets/images/Map_UI.png" type="Texture" id=20]
[ext_resource path="res://assets/images/Journal_UI.png" type="Texture" id=21]
[ext_resource path="res://themes/default_body.tres" type="Theme" id=22]
[ext_resource path="res://ui/inventory_list.gd" type="Script" id=23]
[ext_resource path="res://resources/player_inventory.tres" type="Resource" id=24]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.713726, 0.545098, 0.376471, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.411765, 0.239216, 0.0196078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main" type="Node2D"]
script = ExtResource( 9 )

[node name="Terrain" type="TileMap" parent="."]
z_index = -1
mode = 1
tile_set = ExtResource( 16 )
cell_size = Vector2( 24, 12 )
cell_tile_origin = 1
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -917514, 0, 0, -917513, 0, 0, -917512, 0, 0, -917511, 0, 0, -917510, 0, 0, -917509, 0, 0, -917508, 0, 0, -917507, 0, 0, -917506, 0, 0, -917505, 0, 0, -983040, 0, 0, -983039, 0, 0, -983038, 0, 0, -983037, 0, 0, -983036, 0, 0, -983035, 0, 0, -983034, 0, 0, -983033, 0, 0, -983032, 0, 0, -983031, 0, 0, -851978, 0, 0, -851977, 0, 0, -851976, 0, 0, -851975, 0, 0, -851974, 0, 0, -851973, 0, 0, -851972, 0, 0, -851971, 0, 0, -851970, 0, 0, -851969, 0, 0, -917504, 0, 0, -917503, 0, 0, -917502, 0, 0, -917501, 0, 0, -917500, 0, 0, -917499, 0, 0, -917498, 0, 0, -917497, 0, 0, -917496, 0, 0, -917495, 0, 0, -786442, 0, 0, -786441, 0, 0, -786440, 0, 0, -786439, 0, 0, -786438, 0, 0, -786437, 0, 0, -786436, 0, 0, -786435, 0, 0, -786434, 0, 0, -786433, 0, 0, -851968, 0, 0, -851967, 0, 0, -851966, 0, 0, -851965, 0, 0, -851964, 0, 0, -851963, 0, 0, -851962, 0, 0, -851961, 0, 0, -851960, 0, 0, -851959, 0, 0, -720906, 0, 0, -720905, 0, 0, -720904, 0, 0, -720903, 0, 0, -720902, 0, 0, -720901, 0, 0, -720900, 0, 0, -720899, 0, 0, -720898, 0, 0, -720897, 0, 0, -786432, 0, 0, -786431, 0, 0, -786430, 0, 0, -786429, 0, 0, -786428, 0, 0, -786427, 0, 0, -786426, 0, 0, -786425, 0, 0, -786424, 0, 0, -786423, 0, 0, -655370, 0, 0, -655369, 0, 0, -655368, 0, 0, -655367, 0, 0, -655366, 0, 0, -655365, 0, 0, -655364, 0, 0, -655363, 0, 0, -655362, 0, 0, -655361, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 0, 0, -720893, 0, 0, -720892, 0, 0, -720891, 0, 0, -720890, 0, 0, -720889, 0, 0, -720888, 0, 0, -720887, 0, 0, -589834, 0, 0, -589833, 0, 0, -589832, 0, 0, -589831, 0, 0, -589830, 0, 0, -589829, 0, 0, -589828, 0, 0, -589827, 0, 0, -589826, 0, 0, -589825, 0, 0, -655360, 0, 0, -655359, 0, 0, -655358, 0, 0, -655357, 0, 0, -655356, 0, 0, -655355, 0, 0, -655354, 0, 0, -655353, 0, 0, -655352, 0, 0, -655351, 0, 0, -524298, 0, 0, -524297, 0, 0, -524296, 0, 0, -524295, 0, 0, -524294, 0, 0, -524293, 0, 0, -524292, 0, 0, -524291, 0, 0, -524290, 0, 0, -524289, 0, 0, -589824, 0, 0, -589823, 0, 0, -589822, 0, 0, -589821, 0, 0, -589820, 0, 0, -589819, 0, 0, -589818, 0, 0, -589817, 0, 0, -589816, 0, 0, -589815, 0, 0, -458762, 0, 0, -458761, 0, 0, -458760, 0, 0, -458759, 0, 0, -458758, 0, 0, -458757, 0, 0, -458756, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -393226, 0, 0, -393225, 0, 0, -393224, 0, 0, -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -327690, 0, 0, -327689, 0, 0, -327688, 0, 0, -327687, 0, 0, -327686, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -262154, 0, 0, -262153, 0, 0, -262152, 0, 0, -262151, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -196618, 0, 0, -196617, 0, 0, -196616, 0, 0, -196615, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -131082, 0, 0, -131081, 0, 0, -131080, 0, 0, -131079, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -10, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 262134, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 327670, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 393206, 0, 0, 393207, 0, 0, 393208, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 458742, 0, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 524278, 0, 0, 524279, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 589814, 0, 0, 589815, 0, 0, 589816, 0, 0, 589817, 0, 0, 589818, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 655350, 0, 0, 655351, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 720886, 0, 0, 720887, 0, 0, 720888, 0, 0, 720889, 0, 0, 720890, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 786422, 0, 0, 786423, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 851958, 0, 0, 851959, 0, 0, 851960, 0, 0, 851961, 0, 0, 851962, 0, 0, 851963, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 917494, 0, 0, 917495, 0, 0, 917496, 0, 0, 917497, 0, 0, 917498, 0, 0, 917499, 0, 0, 917500, 0, 0, 917501, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 983030, 0, 0, 983031, 0, 0, 983032, 0, 0, 983033, 0, 0, 983034, 0, 0, 983035, 0, 0, 983036, 0, 0, 983037, 0, 0, 983038, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0 )
script = ExtResource( 15 )
trigger_chance = 10
tile_events = {
"forest": [ "wolf_attack", "berry_bush" ]
}

[node name="EventTiles" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 24, 12 )
cell_tile_origin = 1
cell_y_sort = true
collision_layer = 2
collision_mask = 0
format = 1
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( -72, 78 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -72, 78 )
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1904.0
margin_bottom = 70.0

[node name="HealthBar" parent="CanvasLayer/MarginContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_right = 1888.0
margin_bottom = 54.0

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer"]
visible = false
margin_right = 256.0
margin_bottom = 12.0
value = 12.0
texture_under = ExtResource( 10 )
texture_over = ExtResource( 13 )
texture_progress = ExtResource( 10 )
tint_under = Color( 0.188235, 0.188235, 0.188235, 1 )
tint_over = Color( 0.14902, 0.14902, 0.14902, 1 )
tint_progress = Color( 0.521569, 0.156863, 0.156863, 1 )

[node name="TemperatureBar" type="TextureProgress" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = -276.0
margin_right = 31.0
margin_bottom = -20.0
max_value = 200.0
value = 200.0
texture_under = ExtResource( 12 )
texture_over = ExtResource( 11 )
texture_progress = ExtResource( 12 )
fill_mode = 3
tint_under = Color( 0.188235, 0.188235, 0.188235, 1 )
tint_over = Color( 0.321569, 0.745098, 0.811765, 1 )
tint_progress = Color( 0.6, 0.227451, 0.227451, 1 )
script = ExtResource( 14 )

[node name="Tween" type="Tween" parent="CanvasLayer/TemperatureBar"]

[node name="InventoryList" type="ItemList" parent="CanvasLayer"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -637.0
margin_top = -377.0
margin_right = -81.0
margin_bottom = -177.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 22 )
custom_colors/guide_color = Color( 1, 1, 1, 0 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/selected_focus = SubResource( 4 )
custom_styles/bg_focus = SubResource( 1 )
custom_styles/selected = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
items = [ "Item 0", null, false, "Item 1", null, false, "Climbing Gear", null, false, "Car Battery", null, false ]
auto_height = true
fixed_column_width = 526
script = ExtResource( 23 )
player_inventory = ExtResource( 24 )

[node name="Icons" type="HBoxContainer" parent="CanvasLayer"]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -384.0
margin_top = -148.0
margin_right = -88.0
margin_bottom = -52.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="MapButton" type="TextureButton" parent="CanvasLayer/Icons"]
pause_mode = 2
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
texture_normal = ExtResource( 20 )
expand = true

[node name="JournalButton" type="TextureButton" parent="CanvasLayer/Icons"]
pause_mode = 2
margin_left = 100.0
margin_right = 196.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
texture_normal = ExtResource( 21 )
expand = true

[node name="InventoryButton" type="TextureButton" parent="CanvasLayer/Icons"]
pause_mode = 2
margin_left = 200.0
margin_right = 296.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
texture_normal = ExtResource( 19 )
expand = true

[node name="Journal" parent="CanvasLayer" instance=ExtResource( 18 )]
visible = false

[node name="EventBoard" parent="CanvasLayer" instance=ExtResource( 2 )]
pause_mode = 2
visible = false

[node name="EventService" type="Node" parent="."]
script = ExtResource( 5 )
player = NodePath("../Player")
board = NodePath("../CanvasLayer/EventBoard")

[node name="WorldFog" parent="." instance=ExtResource( 3 )]
tilemap_paths = [ NodePath("../EventTiles"), NodePath("../Terrain") ]

[node name="GameOverService" type="Node" parent="."]
script = ExtResource( 8 )
final_event_name = "ruins"

[node name="GameSaveService" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 17 )
player = NodePath("../Player")
terrain = NodePath("../Terrain")
event_tiles = NodePath("../EventTiles")
event_service = NodePath("../EventService")

[connection signal="unfog_cell" from="." to="WorldFog" method="_on_unfog_cell"]
[connection signal="event_triggered" from="Terrain" to="EventService" method="start_event"]
[connection signal="event_triggered" from="EventTiles" to="EventService" method="start_event"]
[connection signal="moved" from="Player" to="." method="_on_Player_moved"]
[connection signal="moved" from="Player" to="Terrain" method="trigger_event_at"]
[connection signal="moved" from="Player" to="GameSaveService" method="_on_Player_moved"]
[connection signal="temperature_updated" from="Player" to="CanvasLayer/TemperatureBar" method="_on_Player_temperature_updated"]
[connection signal="pressed" from="CanvasLayer/Icons/JournalButton" to="GameSaveService" method="_on_JournalButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Icons/InventoryButton" to="CanvasLayer/InventoryList" method="_on_InventoryButton_pressed"]
[connection signal="load_game" from="CanvasLayer/Journal" to="GameSaveService" method="_on_Journal_load_game"]
[connection signal="choice_selected" from="CanvasLayer/EventBoard" to="EventService" method="apply_outcome"]
[connection signal="event_ended" from="CanvasLayer/EventBoard" to="EventService" method="end_event"]
[connection signal="event_ended" from="CanvasLayer/EventBoard" to="GameOverService" method="_on_EventBoard_event_ended"]
[connection signal="show_journal" from="GameSaveService" to="CanvasLayer/Journal" method="_on_GameSaveService_show_journal"]
[connection signal="update_saves" from="GameSaveService" to="CanvasLayer/Journal" method="_on_GameSaveService_update_saves"]
